--- a/index.html
+++ b/index.html
@@ -124,11 +124,24 @@
     .modal img { max-width:90%; max-height:90%; border-radius:8px; }
     .modal-close { position:absolute; top:20px; right:30px; color:#fff; font-size:2rem; cursor:pointer; }
 
-    /* ---------- Responsive ---------- */
+    /* Responsive */
     @media (max-width:900px){
       .sidebar{display:none}
       .topnav{left:0;width:100%}
-      .content{margin-left:0;padding:100px 18px 40px}
+      .content{
+        margin-left:0;       /* Fix content shifting */
+        width:100%;          /* Full width on mobile */
+        padding:100px 18px 40px;
+      }
+    
+      /* Certificates carousel on mobile */
+      .carousel-item { 
+        flex: 0 0 100%;       /* One full item per view */
+        margin-right: 0; 
+      }
+      .carousel-item img {
+        height: auto;         /* Adjust image height */
+      }
     }
   </style>
 </head>
