--- a/index.html
+++ b/index.html
@@ -23,18 +23,16 @@
     a:hover{text-decoration:underline}
 
     /* ---------- Layout ---------- */
-    .layout{display:flex;min-height:100vh; flex-direction:row;}
+    .layout{display:flex;min-height:100vh;flex-wrap:wrap;}
 
-    /* ---------- Sidebar (Professional) ---------- */
+    /* ---------- Sidebar ---------- */
     .sidebar{
       width:280px;
       background:var(--sidebar-bg);
       padding:30px 20px;
-      position:fixed;
-      left:0; top:0; bottom:0;
-      overflow-y:auto;
       border-right:1px solid #d1d5db;
       color:var(--text);
+      flex-shrink:0;
     }
     .sidebar-header{text-align:center;margin-bottom:30px;}
     .sidebar-header .photo{
@@ -59,26 +57,26 @@
     .sidebar-section ul li{margin-bottom:8px;font-size:0.95rem;line-height:1.5;color:var(--text);}
     .sidebar-section ul li a{color:#4b5563;text-decoration:none;}
     .sidebar-section ul li a:hover{color:var(--accent);text-decoration:underline;}
-    .sidebar::-webkit-scrollbar{width:6px;}
-    .sidebar::-webkit-scrollbar-thumb{background-color:rgba(107,114,128,0.5);border-radius:3px;}
-    .sidebar::-webkit-scrollbar-track{background:transparent;}
 
     /* ---------- Top Navbar ---------- */
     .topnav{
-      position:fixed; left:280px; right:0; top:0;
+      position:sticky; top:0;
       height:56px; background:#ffffff;
       border-bottom:1px solid rgba(0,0,0,0.04);
-      display:flex; align-items:center; gap:18px;
+      display:flex; align-items:center; gap:12px;
       padding:0 28px; z-index:40;
+      overflow-x:auto;
+      scrollbar-width:none;
     }
-    .topnav a{color:var(--text); font-weight:600; padding:6px 10px; border-radius:6px; transition:all .18s; text-decoration:none;}
+    .topnav::-webkit-scrollbar{display:none;}
+    .topnav a{color:var(--text); font-weight:600; padding:6px 10px; border-radius:6px; transition:all .18s; text-decoration:none; white-space:nowrap;}
     .topnav a:hover{color:var(--accent); background:rgba(30,64,175,0.04)}
 
     /* ---------- Content ---------- */
     .content{
-      margin-left:280px;
+      flex:1;
       padding:90px 40px 60px 40px; 
-      width:calc(100% - 280px);
+      min-width:0;
     }
     section{margin-bottom:34px}
     h2.section-title{font-size:1.1rem;color:#444444;margin:0 0 12px;font-weight:700}
@@ -104,42 +102,38 @@
     .project-link{font-weight:600;color:var(--accent);font-size:0.95rem}
 
     /* Carousel */
-    .carousel { position:relative; overflow:hidden; max-width:900px; margin:20px auto; }
+    .carousel { position:relative; overflow:hidden; max-width:900px; margin:0 auto; }
     .carousel-track { display:flex; transition:transform 0.5s ease-in-out; }
-    .carousel-item { flex:0 0 260px; margin-right:1rem; border-radius:8px; overflow:hidden; }
-    .carousel-item img { width:100%; height:180px; object-fit:cover; transition:0.3s; }
+    .carousel-item { flex:0 0 260px; margin-right:1rem; border-radius:8px; overflow:hidden; cursor:pointer; }
+    .carousel-item img { width:100%; height:180px; object-fit:cover; transition:0.3s; display:block; }
     .carousel-item img:hover { transform:scale(1.05); }
-    .carousel-btn { position:absolute; top:50%; transform:translateY(-50%); background:#6b7280; color:white; border:none; padding:8px 12px; border-radius:50%; cursor:pointer; font-size:1.5rem; transition:0.3s; }
+
+    .carousel-btn { position:absolute; top:50%; transform:translateY(-50%); background:#6b7280; color:white; border:none; padding:8px 12px; border-radius:50%; cursor:pointer; font-size:1.5rem; transition:0.3s; z-index:10; }
     .carousel-btn:hover { background:#4b5563; }
     .carousel-btn.left { left:10px; }
     .carousel-btn.right { right:10px; }
 
-    /* ---------- Responsive ---------- */
+    /* Modal for certificate view */
+    .modal { display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.7); justify-content:center; align-items:center; z-index:100; }
+    .modal-content { max-width:90%; max-height:90%; border-radius:12px; overflow:hidden; }
+    .modal-content img { width:100%; height:auto; display:block; }
+
+    /* Responsive adjustments */
     @media (max-width:900px){
       .layout{flex-direction:column;}
-      .sidebar{
-        position:relative;
-        width:100%;
-        height:auto;
-        border-right:none;
-        border-bottom:1px solid #d1d5db;
-        display:block;
-      }
-      .topnav{left:0; width:100%; margin-top:0;}
-      .content{
-        margin-left:0;
-        padding:20px;
-        width:100%;
-      }
-      .carousel-item{flex:0 0 80%; margin-right:10px;}
-      .carousel-btn{padding:6px 10px; font-size:1.2rem;}
+      .sidebar{width:100%; position:relative; border-right:none; padding:20px;}
+      .content{padding:20px;}
+      .carousel { max-width:100%; }
+      .carousel-track { gap:0.5rem; }
+      .carousel-item { flex:0 0 70%; margin-right:0.5rem; }
+      .carousel-btn { display:none; }
     }
   </style>
 </head>
 <body>
 
   <div class="layout">
-    <!-- Sidebar -->
+    <!-- SIDEBAR -->
     <aside class="sidebar" role="complementary">
       <div class="sidebar-header">
         <img class="photo" src="images/profile.jpg" alt="Elnaz Abbasifar">
@@ -167,7 +161,7 @@
       </div>
     </aside>
 
-    <!-- Top Navigation -->
+    <!-- TOP NAV -->
     <header class="topnav" role="navigation" aria-label="Top navigation">
       <a href="#academic">Academic</a>
       <a href="#publications">Publications</a>
@@ -177,7 +171,7 @@
       <a href="#work">Work</a>
     </header>
 
-    <!-- Main Content -->
+    <!-- MAIN CONTENT -->
     <main class="content" role="main">
 
       <!-- Academic Background -->
@@ -199,13 +193,13 @@
         <div class="card pub-card" data-aos="fade-up" data-aos-delay="40">
           <div class="pub-item">
             <div><b>E. Abbasifar, A. Shayan</b></div>
-            <div class="muted">The Impact of Social Network Applications on Customer Trust in Small Businesses with the Mediating Role of Brand Reputation...</div>
+            <div class="muted">The Impact of Social Network Applications on Customer Trust in Small Businesses with the Mediating Role of Brand Reputation: A Structural Equations Modeling Approach (Case Study: Modiseh Online Store). 2nd International Conference on Interdisciplinary Studies in Management & Engineering, University of Tehran, 2020.</div>
           </div>
         </div>
         <div class="card pub-card" data-aos="fade-up" data-aos-delay="80">
           <div class="pub-item">
             <div><b>E. Abbasifar</b></div>
-            <div class="muted">New Applications of Soft Computing Technologies and Soft Data Mining in Bioinformatics: A Review...</div>
+            <div class="muted">New Applications of Soft Computing Technologies and Soft Data Mining in Bioinformatics: A Review. 2nd International Conference on Advances in Engineering and Basic Sciences, London, UK, 2015.</div>
           </div>
         </div>
       </section>
@@ -233,11 +227,11 @@
         <h2 class="section-title">Certificates</h2>
         <div class="carousel" id="carousel">
           <div class="carousel-track" id="track">
-            <div class="carousel-item"><img src="images/cert1.jpg" loading="lazy" alt="Certificate 1"></div>
-            <div class="carousel-item"><img src="images/cert2.jpg" loading="lazy" alt="Certificate 2"></div>
-            <div class="carousel-item"><img src="images/cert3.jpg" loading="lazy" alt="Certificate 3"></div>
-            <div class="carousel-item"><img src="images/cert4.jpg" loading="lazy" alt="Certificate 4"></div>
-            <div class="carousel-item"><img src="images/cert5.jpg" loading="lazy" alt="Certificate 5"></div>
+            <div class="carousel-item"><img src="images/cert1.jpg" alt="Certificate 1" loading="lazy"></div>
+            <div class="carousel-item"><img src="images/cert2.jpg" alt="Certificate 2" loading="lazy"></div>
+            <div class="carousel-item"><img src="images/cert3.jpg" alt="Certificate 3" loading="lazy"></div>
+            <div class="carousel-item"><img src="images/cert4.jpg" alt="Certificate 4" loading="lazy"></div>
+            <div class="carousel-item"><img src="images/cert5.jpg" alt="Certificate 5" loading="lazy"></div>
           </div>
           <button id="prev" class="carousel-btn left" aria-label="Previous">‹</button>
           <button id="next" class="carousel-btn right" aria-label="Next">›</button>
@@ -252,7 +246,21 @@
           <div class="project-meta">A GCN using PyTorch Geometric to classify tree graphs.</div>
           <div class="project-link"><a href="#" target="_blank">GitHub Project Link</a></div>
         </div>
-        <!-- other project cards... -->
+        <div class="card" data-aos="fade-up" data-aos-delay="100">
+          <div class="project-title">Precision in Cardiovascular Risk Prediction: A Lasso Regression Approach — ShineTech, 2023</div>
+          <div class="project-meta">A Lasso Regression model for cardiovascular risk prediction.</div>
+          <div class="project-link"><a href="#" target="_blank">GitHub Project Link</a></div>
+        </div>
+        <div class="card" data-aos="fade-up" data-aos-delay="140">
+          <div class="project-title">Advanced Prediction using Ensemble Learning Techniques — ShineTech, 2023</div>
+          <div class="project-meta">Mobile price prediction models using Decision Trees and Random Forest.</div>
+          <div class="project-link"><a href="#" target="_blank">GitHub Project Link</a></div>
+        </div>
+        <div class="card" data-aos="fade-up" data-aos-delay="180">
+          <div class="project-title">EDA Seattle Area Traffic Collision Data — Data Circles, 2020</div>
+          <div class="project-meta">During Data Circles workshop, we analyzed Seattle traffic collision data to help prioritize road improvements and prevent future collisions through Exploratory Data Analysis (EDA).</div>
+          <div class="project-link"><a href="#" target="_blank">GitHub Project Link</a></div>
+        </div>
       </section>
 
       <!-- Work Experience -->
@@ -262,46 +270,82 @@
           <div style="font-weight:700">BPM Data Analyst — Pegah Aftab, Tehran, Iran (Apr 2021 – Present)</div>
           <ul class="clean">
             <li>Designed and implemented business processes and UI components using C# and React.</li>
+            <li>Analyzed workflows and authored technical documentation to support process optimization.</li>
           </ul>
         </div>
-        <!-- other work cards... -->
+        <div class="card" data-aos="fade-up" data-aos-delay="100">
+          <div style="font-weight:700">BI Developer — Pegah Aftab, Tehran, Iran (Jun – Dec 2024)</div>
+          <ul class="clean">
+            <li>Developed interactive dashboards in Power BI to visualize key performance metrics and support decision-making.</li>
+          </ul>
+        </div>
+        <div class="card" data-aos="fade-up" data-aos-delay="140">
+          <div style="font-weight:700">Data Science Intern (Python) — T25 Company, Tehran, Iran (Nov 2020 – Jan 2021)</div>
+          <ul class="clean">
+            <li>Developed Python scripts to automate data collection, processing, and analysis.</li>
+          </ul>
+        </div>
+        <div class="card" data-aos="fade-up" data-aos-delay="180">
+          <div style="font-weight:700">SQL Developer / BPM Developer — Payam Mashregh, Esfahan, Iran (2014 – 2017)</div>
+          <ul class="clean">
+            <li>Supervised a 9-member development team in optimizing processes and workflows.</li>
+            <li>Implemented SQL queries to automate workflows and support data-driven decision-making.</li>
+          </ul>
+        </div>
       </section>
 
     </main>
+  </div>
+
+  <!-- Certificate Modal -->
+  <div id="modal" class="modal">
+    <div class="modal-content"><img src="" alt="Certificate"></div>
   </div>
 
   <script>
     // Scroll animation
     function scrollAnimation() {
       const elements = document.querySelectorAll('[data-animate]');
-      const triggerBottom = window.innerHeight * 0.85;
+      const triggerBottom = window.innerHeight / 5 * 4;
+
       elements.forEach(el => {
         const boxTop = el.getBoundingClientRect().top;
-        if(boxTop < triggerBottom) el.classList.add('active');
+        if(boxTop < triggerBottom) {
+          el.classList.add('aos-animate');
+        } else {
+          el.classList.remove('aos-animate');
+        }
       });
     }
     window.addEventListener('scroll', scrollAnimation);
     window.addEventListener('load', scrollAnimation);
-    
-    // Carousel
+
+    // Certificates carousel
     const track = document.getElementById('track');
     const prev = document.getElementById('prev');
     const next = document.getElementById('next');
-    const items = track.children;
     let index = 0;
-    
+
     function updateCarousel() {
       track.style.transform = `translateX(-${index*260}px)`;
     }
-    prev.addEventListener('click', () => { index = (index===0?items.length-1:index-1); updateCarousel(); });
-    next.addEventListener('click', () => { index = (index===items.length-1?0:index+1); updateCarousel(); });
-    setInterval(()=>{ index = (index+1)%items.length; updateCarousel(); },5000);
+    prev.addEventListener('click', ()=>{ index = Math.max(index-1,0); updateCarousel(); });
+    next.addEventListener('click', ()=>{ index = Math.min(index+1,track.children.length-4); updateCarousel(); });
+
+    // Certificate modal
+    const modal = document.getElementById('modal');
+    const modalImg = modal.querySelector('img');
+    document.querySelectorAll('.carousel-item img').forEach(img=>{
+      img.addEventListener('click', ()=>{
+        modal.style.display = 'flex';
+        modalImg.src = img.src;
+      });
+    });
+    modal.addEventListener('click', ()=> modal.style.display = 'none');
   </script>
 
+  <!-- AOS JS -->
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <script>
-    AOS.init({duration:800, once:true});
-  </script>
-
+  <script>AOS.init({once:true, duration:800});</script>
 </body>
 </html>
