--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Elnaz Abbasifar — Portfolio</title>
+  <title>Elnaz Abbasifar</title>
 
-  <!-- AOS CSS (Animate On Scroll) -->
+  <!-- AOS CSS -->
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
   <style>
@@ -17,10 +17,10 @@
       --sidebar-bg:#f3f4f6;
       --card-bg:#ffffff;
     }
-    *{box-sizing:border-box}
+    *{box-sizing:border-box;}
     html,body{height:100%;margin:0;padding:0;font-family:'Segoe UI', Tahoma, Arial, sans-serif; background:#f8fafc;color:var(--text); -webkit-font-smoothing:antialiased; direction:ltr;}
     a{color:var(--accent); text-decoration:none;}
-    a:hover{text-decoration:underline}
+    a:hover{text-decoration:underline;}
 
     /* ---------- Layout ---------- */
     .layout{display:flex;min-height:100vh;flex-direction:row;}
@@ -69,10 +69,11 @@
       height:56px; background:#ffffff;
       border-bottom:1px solid rgba(0,0,0,0.04);
       display:flex; align-items:center; gap:18px;
-      padding:0 28px; z-index:40;
-      overflow-x:auto;
+      padding:0 28px; z-index:40; overflow-x:auto;
     }
-    .topnav a{color:var(--text); font-weight:600; padding:6px 10px; border-radius:6px; transition:all .18s; text-decoration:none; white-space:nowrap;}
+    .topnav a{
+      color:var(--text); font-weight:600; padding:6px 10px; border-radius:6px; transition:all .18s; text-decoration:none; white-space:nowrap;
+    }
     .topnav a:hover{color:var(--accent); background:rgba(30,64,175,0.04)}
 
     /* ---------- Content ---------- */
@@ -104,41 +105,32 @@
     .project-meta{color:var(--muted);font-size:0.95rem;margin-bottom:8px}
     .project-link{font-weight:600;color:var(--accent);font-size:0.95rem}
 
-    /* Certificates carousel */
+    /* Carousel (Certificates) */
     .carousel { position:relative; overflow:hidden; max-width:900px; margin:0 auto; }
     .carousel-track { display:flex; transition:transform 0.5s ease-in-out; }
-    .carousel-item { flex:0 0 260px; margin-right:1rem; border-radius:8px; overflow:hidden; cursor:pointer; }
-    .carousel-item img { width:100%; height:180px; object-fit:cover; transition:0.3s; display:block; }
+    .carousel-item { flex:0 0 100%; max-width:600px; margin:0 auto; border-radius:8px; overflow:hidden; }
+    .carousel-item img { width:100%; height:auto; object-fit:cover; transition:0.3s; display:block; }
     .carousel-item img:hover { transform:scale(1.05); }
-    .carousel-btn { position:absolute; top:50%; transform:translateY(-50%); background:#6b7280; color:white; border:none; padding:8px 12px; border-radius:50%; cursor:pointer; font-size:1.5rem; transition:0.3s; z-index:10; }
-    .carousel-btn:hover { background:#4b5563; }
+    .carousel-btn { position:absolute; top:50%; transform:translateY(-50%); background:#1e40af; color:white; border:none; padding:10px 14px; border-radius:50%; cursor:pointer; font-size:1.6rem; transition:0.3s; }
+    .carousel-btn:hover { background:#374151; }
     .carousel-btn.left { left:10px; }
     .carousel-btn.right { right:10px; }
 
-    /* Modal for full certificate */
-    .modal { display:none; position:fixed; z-index:50; left:0; top:0; width:100%; height:100%; overflow:auto; background:rgba(0,0,0,0.8); justify-content:center; align-items:center; }
-    .modal-content { max-width:90%; max-height:90%; }
-    .modal-content img { width:100%; height:auto; display:block; border-radius:8px; }
-
-    /* Responsive adjustments */
+    /* Responsive */
     @media (max-width:900px){
       .layout{flex-direction:column;}
-      .sidebar{position:relative;width:100%;border-right:none;border-bottom:1px solid #d1d5db; padding:18px;}
-      .topnav{position:relative; left:0; top:0; width:100%; padding:12px 18px; border-bottom:1px solid #d1d5db; overflow-x:auto;}
-      .content{margin-left:0; padding:20px 18px;}
-      
-      /* Certificates mobile: show one at a time vertically */
-      .carousel { max-width:100%; overflow:visible; }
-      .carousel-track { flex-direction:column; transform:none !important; }
-      .carousel-item { flex:1 0 auto; margin:0 0 18px 0; }
-      .carousel-btn { display:none; } /* hide buttons on mobile */
+      .sidebar{position:relative;width:100%; border-right:none; padding:20px;}
+      .topnav{position:relative; left:0; width:100%; padding:10px 18px;}
+      .content{margin-left:0;padding:20px;}
+      .carousel{max-width:100%;}
+      .carousel-item{max-width:100%;}
     }
   </style>
 </head>
 <body>
 
   <div class="layout">
-    <!-- SIDEBAR -->
+    <!-- Sidebar -->
     <aside class="sidebar" role="complementary">
       <div class="sidebar-header">
         <img class="photo" src="images/profile.jpg" alt="Elnaz Abbasifar">
@@ -166,7 +158,7 @@
       </div>
     </aside>
 
-    <!-- TOP NAV -->
+    <!-- Top Navbar -->
     <header class="topnav" role="navigation" aria-label="Top navigation">
       <a href="#academic">Academic</a>
       <a href="#publications">Publications</a>
@@ -176,7 +168,7 @@
       <a href="#work">Work</a>
     </header>
 
-    <!-- MAIN CONTENT -->
+    <!-- Main Content -->
     <main class="content" role="main">
 
       <!-- Academic Background -->
@@ -228,15 +220,15 @@
       </section>
 
       <!-- Certificates -->
-      <section id="certificates" data-animate data-aos="fade-up">
+      <section id="certificates" data-animate style="background:#f8fafc;" data-aos="fade-up">
         <h2 class="section-title">Certificates</h2>
         <div class="carousel" id="carousel">
           <div class="carousel-track" id="track">
-            <div class="carousel-item"><img src="images/cert1.jpg" alt="Certificate 1"></div>
-            <div class="carousel-item"><img src="images/cert2.jpg" alt="Certificate 2"></div>
-            <div class="carousel-item"><img src="images/cert3.jpg" alt="Certificate 3"></div>
-            <div class="carousel-item"><img src="images/cert4.jpg" alt="Certificate 4"></div>
-            <div class="carousel-item"><img src="images/cert5.jpg" alt="Certificate 5"></div>
+            <div class="carousel-item"><img src="images/cert1.jpg" alt="Certificate 1" loading="lazy"></div>
+            <div class="carousel-item"><img src="images/cert2.jpg" alt="Certificate 2" loading="lazy"></div>
+            <div class="carousel-item"><img src="images/cert3.jpg" alt="Certificate 3" loading="lazy"></div>
+            <div class="carousel-item"><img src="images/cert4.jpg" alt="Certificate 4" loading="lazy"></div>
+            <div class="carousel-item"><img src="images/cert5.jpg" alt="Certificate 5" loading="lazy"></div>
           </div>
           <button id="prev" class="carousel-btn left" aria-label="Previous">‹</button>
           <button id="next" class="carousel-btn right" aria-label="Next">›</button>
@@ -291,9 +283,10 @@
           </ul>
         </div>
         <div class="card" data-aos="fade-up" data-aos-delay="180">
-          <div style="font-weight:700">SQL Developer / BPM Developer — Payam Mashregh, Tehran, Iran (2017 – 2018)</div>
+          <div style="font-weight:700">SQL Developer / BPM Developer — Payam Mashregh, Esfahan, Iran (2014 – 2017)</div>
           <ul class="clean">
-            <li>Designed SQL stored procedures and BPM workflows for enterprise solutions.</li>
+            <li>Supervised a 9-member development team in optimizing processes and workflows.</li>
+            <li>Implemented SQL queries to automate workflows and support data-driven decision-making.</li>
           </ul>
         </div>
       </section>
@@ -301,42 +294,48 @@
     </main>
   </div>
 
-  <!-- Certificate Modal -->
-  <div class="modal" id="modal">
-    <div class="modal-content"><img src="" alt="Certificate Full View"></div>
-  </div>
-
-  <!-- Scripts -->
-  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script>
-    AOS.init({duration:800,once:true});
+    // Scroll animation
+    function scrollAnimation() {
+      const elements = document.querySelectorAll('[data-animate]');
+      const triggerBottom = window.innerHeight * 0.85;
+      elements.forEach(el => {
+        const boxTop = el.getBoundingClientRect().top;
+        if(boxTop < triggerBottom){
+          el.classList.add('animate');
+        }
+      });
+    }
+    window.addEventListener('scroll', scrollAnimation);
+    window.addEventListener('load', scrollAnimation);
 
-    // ---------- Carousel logic ----------
+    // Carousel for Certificates
     const track = document.getElementById('track');
-    const items = track.children;
+    const items = Array.from(track.children);
     const prevBtn = document.getElementById('prev');
     const nextBtn = document.getElementById('next');
     let index = 0;
 
-    function updateCarousel() {
-      const width = items[0].offsetWidth + 16; // item width + margin
-      track.style.transform = `translateX(${-index*width}px)`;
+    function updateCarousel(){
+      const width = items[0].getBoundingClientRect().width;
+      track.style.transform = `translateX(-${index*width}px)`;
     }
 
-    prevBtn.addEventListener('click', () => { index = Math.max(0,index-1); updateCarousel(); });
-    nextBtn.addEventListener('click', () => { index = Math.min(items.length-1,index+1); updateCarousel(); });
-    window.addEventListener('resize', () => { if(window.innerWidth>900) updateCarousel(); });
-
-    // ---------- Modal logic ----------
-    const modal = document.getElementById('modal');
-    const modalImg = modal.querySelector('img');
-    Array.from(items).forEach(item=>{
-      item.addEventListener('click', ()=>{
-        modal.style.display='flex';
-        modalImg.src=item.querySelector('img').src;
-      });
+    prevBtn.addEventListener('click',()=>{
+      index = (index-1 + items.length) % items.length;
+      updateCarousel();
     });
-    modal.addEventListener('click', ()=>{modal.style.display='none';});
+    nextBtn.addEventListener('click',()=>{
+      index = (index+1) % items.length;
+      updateCarousel();
+    });
+    window.addEventListener('resize', updateCarousel);
+    updateCarousel();
+  </script>
+
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init({duration:800, once:true});
   </script>
 </body>
 </html>
